--- a/build.gradle
+++ b/build.gradle
@@ -10,19 +10,30 @@
 
 // Apply the java plugin to add support for Java
 apply plugin: 'java'
+apply plugin: 'application'
+mainClassName = 'main'
+sourceSets.main.java.srcDirs = ['src/main/java']
 
 // In this section you declare where to find the dependencies of your project
 repositories {
     // Use 'jcenter' for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
-    jcenter()
+    //jcenter()
+	mavenCentral()
 }
+
+//jar {
+//    manifest {
+//        attributes 'Main-Class': 'Main.class'
+//    }
+//}
 
 //build shit
 sourceSets {
     main {
         java {
 			srcDir 'src/main/java'
+			//mainClassName = 'Main.class'
         }
         //resources {
         //    srcDir 'src/resources'
@@ -42,3 +53,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
 }
 
+task wrapper(type: Wrapper){
+	gradleVersion = '2.0'
+}
